# my-starter-kit-fastapi

./: .env.example  CHANGELOG.md  Dockerfile  README.md  alembic.ini  copier.yml  docker-compose.yml  docker-entrypoint.sh  justfile  pyproject.toml
.github/workflows/: release.yml
app/: auth.py  auth_routes.py  database.py  htmx.py  jinja_filters.py  main.py  models.py  schemas.py  themes.py
app/static/css/: theme.css
app/templates/: index.html  profile.html  settings.html
app/templates/admin/: dashboard.html  roles.html
data/: app.db
migrations/: env.py
migrations/versions/: 3ad4540a4ed1_initial_migration.py
template/: .env.example  .env.example.jinja  .gitignore  Dockerfile.jinja  README.md.jinja  USER_INSTRUCTIONS.md  docker-compose.yml.jinja  docker-entrypoint.sh.jinja  justfile.jinja  pre_copy.py  pyproject.toml.jinja  pytest.ini  tasks.py
template/app/: admin_routes.py  main.py.jinja  roles.py  todo_routes.py
template/app/templates/: base.html  login.html  register.html
template/app/templates/admin/: user_form.html  users.html
template/tests/: conftest.py  test_auth.py  test_docs_protection.py
tests/: conftest.py  test_admin.py  test_roles.py
